[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/GLTF/character_template/character_template.gltf" type="PackedScene" id=1]
[ext_resource path="res://Scripts/HumanoidScript.gd" type="Script" id=2]
[ext_resource path="res://Resources/GLTF/magician_hat/magician_hat.gltf" type="PackedScene" id=3]
[ext_resource path="res://Resources/GLTF/polearms/polearm_000.gltf" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 1.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.27044, 2.40668, 1.66797 )

[node name="HumanoidCharacter" type="KinematicBody"]
transform = Transform( 1.05343, 0, 0, 0, 1.05343, 0, 0, 0, 1.05343, 0, 0, 0 )
input_ray_pickable = false
collision_mask = 1024
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.0063, 0.0444026 )
shape = SubResource( 1 )

[node name="model_root" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.664, 0, 0, 0, 0.664, 0, 0, 0, 0.664, 0, 0, 0 )

[node name="Armature" parent="model_root" index="0"]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )

[node name="HatBone" type="BoneAttachment" parent="model_root/Armature/Skeleton" index="1"]
transform = Transform( 0.91498, -0.117067, -0.386144, 0.0410899, 0.979045, -0.199454, 0.401402, 0.16663, 0.900617, -0.022032, 1.21472, 0.127732 )
bone_name = "head"

[node name="model_root2" parent="model_root/Armature/Skeleton/HatBone" instance=ExtResource( 3 )]
transform = Transform( 1.12158, 0.000755072, -0.00872422, -0.00121911, 1.12002, -0.0597914, 0.00867155, 0.059799, 1.11999, 0.0131039, 1.06313, 0.1027 )

[node name="_2H_spear" type="BoneAttachment" parent="model_root/Armature/Skeleton" index="2"]
transform = Transform( 0.742144, -0.666467, 0.0710298, 0.114139, 0.0212442, -0.993238, 0.660451, 0.745232, 0.0918366, -0.525136, 0.759561, 1.7762 )
bone_name = "weapon"

[node name="model_root" parent="model_root/Armature/Skeleton/_2H_spear" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.614, 0 )

[node name="AnimationPlayer" parent="model_root" index="1"]
playback_process_mode = 0
blend_times = [ "Jumping", "Standing", 0.05, "Jumping", "Standing_2H_spear", 0.05, "Jumping", "Walking", 0.05, "Walking", "Jumping", 0.02 ]

[node name="hitbox_Attacking_2H_spear" type="Area" parent="model_root"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -2.37169, 2.21839, 0.874 )
input_ray_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="model_root/hitbox_Attacking_2H_spear"]
shape = SubResource( 2 )
[connection signal="triggering_action" from="." to="." method="_on_triggering_action"]
[connection signal="animation_finished" from="model_root/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="model_root"]
